    new GSWDatabase Framework for EOF/GDL based applications
    not tested yet!
    GSWeb.framework:
    * Moved WODisplayGroup.? to GSWDatabase
      changed: GNUmakefile GSWeb.h GSWWOCompatibility.h
    * GSWApplication: removed EOF
    * small cleanups
    * GSWUtils.m EONull -> NSNull
    * GSWApplication+Defaults.m, GSWPrivate.h additions for Monitoring

2010-04-14  David Wetzel <dave@turbocat.de>
    Apache2/GNUmakefile.in
    * changed flags, clean now

2010-01-20  David Wetzel <dave@turbocat.de>
    GSWeb.framework/GSWApplication.m
    * added _setHostAddress:, hostAddress 

    GSWeb.framework/GSWRequest.h
    * added _originatingAddress, _originatingPort

    GSWeb.framework/GSWDisplayGroup.h
    * changed undoManager to be id as compile fix for TCSDB.
    
    GSWeb.framework/GSWApplication+Defaults.m
    * added hostAddress
    
    GSWeb.framework/GSWHTTPIO.h
    * added _setAlwaysAppendContentLength
    
    GSWeb.framework/GSWHTTPIO.m
    * added _alwaysAppendContentLength
    * added + (void) _getConnectionInfoFromHandle:remoteAddress:remotePort:
    * set originatingAddress and port to request now.
    
    GSWeb.framework/GSWApplication.h
    * added _hostAddress, hostAddress, _setHostAddress
    * removed lots of @interface lines.

2009-06-12  David Wetzel <dave@turbocat.de>
    GSWAdaptors/Apache2/GNUmakefile.in
    * added -g to include debug info as default

2009-06-12  David Wetzel <dave@turbocat.de>
    GSWAdaptors/Apache2/mod_gsw.c:
    * removed unused read_sock()
    * reformated read_sock_line()

2009-04-14  David Ayers  <ayers@fsfe.org>

	* configure.ac: Warn if GDL2 isn't found.
	* configure: Regenerate.
	
2009-04-07  David Ayers  <ayers@fsfe.org>

	* GSWeb.framework/GSWeb.h (GSWImageInfo): Foward declare.
	* GSWeb.framework/GSWHTMLDynamicElement.h/m
	(-/+[_frameworkNameForAssociation:inComponent:]): Convert to class
	method.  Cleanup implementation.
	* GSWeb.framework/GSWImage.m